Fixed minor bug, with align parameter

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,7 +16,7 @@ textarea {
 }
 
 .center {
-	text-allign: center;
+	text-align: center;
 }
 
 .center h1 {
